2004-05-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b152

	* Fix:  Correct URL to rss.php when in embedded mode.  We can't
	  use makeGalleryUrl() since that links to an embedded rss.php
	  which really isn't usable.

	* Change:  Remove an unnecessary if block from rss.php

2004-05-27  Don Willingham <donwillingham@users.sf.net>  1.4.4-cvs-b151

	* Change: Add watermark on upload support, form and URL upload only.

	* Fix: Do not set recursive, unless displaying form.  Attempts to
	  fix bug #958542, watermarking: exclude subalbums not working.
	  (Thanks to primedomain) 

2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b150

	* Fix: rss.php now correctly retrieves highlights which are set
	  in a sub-album, rather than the target album itself.

2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b149

	* Fix: Remove border=1 from gallery.footer, added in last checkin

	* Fix: Correct linebreaks in config_data.inc

2004-05-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b148

	* Change: Complete Config Wizard-ization of rss.php

	* Change: Addition of RSS link to the bottom of the gallery.footer
	  if rss is enabled.

2004-05-26  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b147

	* Fix: Remove warnings in rss.php when in dev mode an not reconfigured.

	* Change: Little text change.

2004-05-25  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b146

	* Fixed upload (and slideshow) applets when Gallery is embedded in PHPNuke.
	  Other CMSs may need more work. The applets are confirmed to work
	  with PHPNuke and PostNuke.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b145

	* Change: rss.php config options mostly migrated to config wizard.

2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b144

	* Change:  Add "php_value session.save_handler files" to 
	  the php_values.template to proactively prevent some of the 
	  cases where it's set to "user" system-wide.
