@@ -1,3 +1,7 @@
+2004-05-27  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b153
+
+	* Fixed upload (and slideshow) applets when Gallery is embedded in Geeklog.
+
 2004-05-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b152
 
 	* Fix:  Correct URL to rss.php when in embedded mode.  We can't
